@startuml



package "state machine" {
    class StateMachine {
        States []State
        Transitions []Transition
    }

    StateMachine *--> "1..*" State
    StateMachine *--> "1..*" Transition
    Transition --> State

    class State {
        Name string
        Category StateCategory
    }
    State --> StateCategory

    enum StateCategory {
        OPEN
        IN_PROGRESS
        CLOSED
    }

    class Transition {
        Name string
        From State
        To   State
    }
}

package "workflow (work definition)" {
    class Workflow {
        ID id
        String name
        StateMachine StateMachine
        PropertyDefinitions []PropertyDefinition
    }

    Workflow ..> "1" StateMachine
    Workflow --> "*" PropertyDefinition

    class PropertyDefinition {
        Name string
    }
}


package "work" {
    class Work {
        Workflow Workflow
        PropertyAssigns []PropertyAssign
    }

    class PropertyAssign {
        PropertyDefinition definition
        Object value
    }

    Work ..> Workflow
    Work *--> PropertyAssign

    PropertyAssign ..> PropertyDefinition
}

package "project" {
    Project *--> Work
    Project *--> Workflow
}

package "account" {
     Project "1..n" - "1..n" User
}

@enduml